tarea_programada_1/entrega_4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> file
Rule 1     file -> header init listcon
Rule 2     header -> ROUTE_HEADER vpnip ROUTE_HEADER
Rule 3     vpnip -> VPN_IP IP vpnip
Rule 4     vpnip -> empty
Rule 5     init -> initbody FASE_END
Rule 6     initbody -> date software initbody
Rule 7     initbody -> date network initbody
Rule 8     initbody -> date hardware initbody
Rule 9     initbody -> empty
Rule 10    software -> plugin
Rule 11    software -> SYS_MSG SPECIAL_CHAR VAR_SET VAR_VAL VAR_SET VAR_VAL
Rule 12    network -> sbinit
Rule 13    network -> tuntap
Rule 14    network -> CRYPTO_MSG
Rule 15    network -> ROUTE_GATEWAY IP SLASH IP VAR_SET VAR_VAL VAR_SET VAR_VAL
Rule 16    network -> IP_PROTOCOL
Rule 17    network -> CONN_MSG VAR_SET VAR_VAL VAR_SET VAR_VAL
Rule 18    network -> CONN_MSG VAR_SET IP VAR_SET VAR_VAL SPECIAL_CHAR VAR_SET VAR_VAL
Rule 19    network -> IFCONFIG_END
Rule 20    network -> CONN_MSG
Rule 21    network -> TCP_MSG
Rule 22    network -> SYS_MSG VAR_SET VAR_VAL VAR_SET VAR_VAL
Rule 23    hardware -> SYS_MSG
Rule 24    hardware -> SIGTERM_MSG
Rule 25    hardware -> OPEN_VPN_MSG MONTH DAY YEAR
Rule 26    hardware -> LIB_VER_MSG DAY MONTH YEAR LIB_VER_MSG
Rule 27    hardware -> SYS_MSG VAR_SET VAR_VAL
Rule 28    hardware -> VAR_SET VAR_VAL
Rule 29    sbinit -> SBIN_IP_MSG IP IP_RNG
Rule 30    sbinit -> SBIN_IP_MSG IP IP_RNG PEER IP
Rule 31    sbinit -> SBIN_IP_MSG IP PEER IP
Rule 32    sbinit -> SBIN_IP_MSG
Rule 33    sbinit -> empty
Rule 34    plugin -> PLUGIN_MSG DIR VAR_SET VAR_VAL
Rule 35    plugin -> PLUGIN_MSG DIR SPECIAL_CHAR SPECIAL_CHAR DIR SPECIAL_CHAR FLAGS SPECIAL_CHAR VAR_SET VAR_VAL
Rule 36    plugin -> PLUGIN_MSG DIR
Rule 37    plugin -> PLUGIN_MSG
Rule 38    plugin -> IP PORT PLUGIN_MSG DIR VAR_SET VAR_VAL
Rule 39    tuntap -> TUN_TAP_MSG
Rule 40    listcon -> listcon conection
Rule 41    listcon -> conection
Rule 42    conection -> start login peering conline end
Rule 43    start -> date TCP_MSG IP PORT
Rule 44    login -> login loginmsg
Rule 45    login -> loginmsg
Rule 46    loginmsg -> date IP PORT SYS_MSG FLAGS IP PORT SPECIAL_CHAR VAR_SET VAR_VAL
Rule 47    loginmsg -> date plugin
Rule 48    loginmsg -> date IP PORT SYS_MSG SPECIAL_CHAR user SPECIAL_CHAR CN_SET
Rule 49    loginmsg -> date IP PORT CONN_MSG CRYPTO_MSG
Rule 50    loginmsg -> date IP PORT SPECIAL_CHAR user SPECIAL_CHAR PEER IP PORT
Rule 51    peering -> peering peermsg
Rule 52    peering -> peermsg
Rule 53    peermsg -> peercon CONN_MSG POOL_RET VAR_SET IP SPECIAL_CHAR VAR_SET VAR_VAL
Rule 54    peermsg -> peercon plugin
Rule 55    peermsg -> peercon CONN_MSG CONN_MSG DIR
Rule 56    peermsg -> peercon CONN_MSG CONN_MSG IP SPECIAL_CHAR SPECIAL_CHAR user SLASH IP PORT
Rule 57    peermsg -> peercon SYS_MSG user SLASH IP PORT COLON IP
Rule 58    peermsg -> peercon SYS_MSG
Rule 59    conline -> routehead routing routend
Rule 60    routehead -> peercon SENT_CNT SPECIAL_CHAR user SPECIAL_CHAR COLON SPECIAL_CHAR
Rule 61    routend -> TOPOLOGY IP IP SPECIAL_CHAR PEER SPECIAL_CHAR CIPHER SPECIAL_CHAR VAR_SET VAR_VAL
Rule 62    routing -> routing route
Rule 63    routing -> route
Rule 64    route -> ROUTE_FLAG VPN_IP IP
Rule 65    route -> ROUTE_FLAG VPN_IP
Rule 66    end -> endmsg endmsg endmsg
Rule 67    endmsg -> peercon CONN_MSG CIPHER
Rule 68    peercon -> date user SLASH IP PORT
Rule 69    date -> WEEK_DAY MONTH DAY CLOCK YEAR
Rule 70    user -> CARNET
Rule 71    user -> PROF
Rule 72    empty -> <empty>

Terminals, with rules where they appear

CARNET               : 70
CIPHER               : 61 67
CLOCK                : 69
CN_SET               : 48
COLON                : 57 60
CONN_MSG             : 17 18 20 49 53 55 55 56 56 67
CRYPTO_MSG           : 14 49
DAY                  : 25 26 69
DIR                  : 34 35 35 36 38 55
FASE_END             : 5
FLAGS                : 35 46
IFCONFIG_END         : 19
IP                   : 3 15 15 18 29 30 30 31 31 38 43 46 46 48 49 50 50 53 56 56 57 57 61 61 64 68
IP_PROTOCOL          : 16
IP_RNG               : 29 30
LIB_VER_MSG          : 26 26
MONTH                : 25 26 69
OPEN_VPN_MSG         : 25
PEER                 : 30 31 50 61
PLUGIN_MSG           : 34 35 36 37 38
POOL_RET             : 53
PORT                 : 38 43 46 46 48 49 50 50 56 57 68
PROF                 : 71
ROUTE_FLAG           : 64 65
ROUTE_GATEWAY        : 15
ROUTE_HEADER         : 2 2
SBIN_IP_MSG          : 29 30 31 32
SENT_CNT             : 60
SIGTERM_MSG          : 24
SLASH                : 15 56 57 68
SPECIAL_CHAR         : 11 18 35 35 35 35 46 48 48 50 50 53 56 56 60 60 60 61 61 61
SYS_MSG              : 11 22 23 27 46 48 57 58
TCP_MSG              : 21 43
TOPOLOGY             : 61
TUN_TAP_MSG          : 39
VAR_SET              : 11 11 15 15 17 17 18 18 18 22 22 27 28 34 35 38 46 53 53 61
VAR_VAL              : 11 11 15 15 17 17 18 18 22 22 27 28 34 35 38 46 53 61
VPN_IP               : 3 64 65
WEEK_DAY             : 69
YEAR                 : 25 26 69
error                : 

Nonterminals, with rules where they appear

conection            : 40 41
conline              : 42
date                 : 6 7 8 43 46 47 48 49 50 68
empty                : 4 9 33
end                  : 42
endmsg               : 66 66 66
file                 : 0
hardware             : 8
header               : 1
init                 : 1
initbody             : 5 6 7 8
listcon              : 1 40
login                : 42 44
loginmsg             : 44 45
network              : 7
peercon              : 53 54 55 56 57 58 60 67
peering              : 42 51
peermsg              : 51 52
plugin               : 10 47 54
route                : 62 63
routehead            : 59
routend              : 59
routing              : 59 62
sbinit               : 12
software             : 6
start                : 42
tuntap               : 13
user                 : 48 50 56 57 60 68
vpnip                : 2 3

Parsing method: LALR

state 0

    (0) S' -> . file
    (1) file -> . header init listcon
    (2) header -> . ROUTE_HEADER vpnip ROUTE_HEADER

    ROUTE_HEADER    shift and go to state 3

    file                           shift and go to state 1
    header                         shift and go to state 2

state 1

    (0) S' -> file .



state 2

    (1) file -> header . init listcon
    (5) init -> . initbody FASE_END
    (6) initbody -> . date software initbody
    (7) initbody -> . date network initbody
    (8) initbody -> . date hardware initbody
    (9) initbody -> . empty
    (69) date -> . WEEK_DAY MONTH DAY CLOCK YEAR
    (72) empty -> .

    WEEK_DAY        shift and go to state 8
    FASE_END        reduce using rule 72 (empty -> .)

    init                           shift and go to state 4
    initbody                       shift and go to state 5
    date                           shift and go to state 6
    empty                          shift and go to state 7

state 3

    (2) header -> ROUTE_HEADER . vpnip ROUTE_HEADER
    (3) vpnip -> . VPN_IP IP vpnip
    (4) vpnip -> . empty
    (72) empty -> .

    VPN_IP          shift and go to state 10
    ROUTE_HEADER    reduce using rule 72 (empty -> .)

    vpnip                          shift and go to state 9
    empty                          shift and go to state 11

state 4

    (1) file -> header init . listcon
    (40) listcon -> . listcon conection
    (41) listcon -> . conection
    (42) conection -> . start login peering conline end
    (43) start -> . date TCP_MSG IP PORT
    (69) date -> . WEEK_DAY MONTH DAY CLOCK YEAR

    WEEK_DAY        shift and go to state 8

    listcon                        shift and go to state 12
    conection                      shift and go to state 13
    start                          shift and go to state 14
    date                           shift and go to state 15

state 5

    (5) init -> initbody . FASE_END

    FASE_END        shift and go to state 16


state 6

    (6) initbody -> date . software initbody
    (7) initbody -> date . network initbody
    (8) initbody -> date . hardware initbody
    (10) software -> . plugin
    (11) software -> . SYS_MSG SPECIAL_CHAR VAR_SET VAR_VAL VAR_SET VAR_VAL
    (12) network -> . sbinit
    (13) network -> . tuntap
    (14) network -> . CRYPTO_MSG
    (15) network -> . ROUTE_GATEWAY IP SLASH IP VAR_SET VAR_VAL VAR_SET VAR_VAL
    (16) network -> . IP_PROTOCOL
    (17) network -> . CONN_MSG VAR_SET VAR_VAL VAR_SET VAR_VAL
    (18) network -> . CONN_MSG VAR_SET IP VAR_SET VAR_VAL SPECIAL_CHAR VAR_SET VAR_VAL
    (19) network -> . IFCONFIG_END
    (20) network -> . CONN_MSG
    (21) network -> . TCP_MSG
    (22) network -> . SYS_MSG VAR_SET VAR_VAL VAR_SET VAR_VAL
    (23) hardware -> . SYS_MSG
    (24) hardware -> . SIGTERM_MSG
    (25) hardware -> . OPEN_VPN_MSG MONTH DAY YEAR
    (26) hardware -> . LIB_VER_MSG DAY MONTH YEAR LIB_VER_MSG
    (27) hardware -> . SYS_MSG VAR_SET VAR_VAL
    (28) hardware -> . VAR_SET VAR_VAL
    (34) plugin -> . PLUGIN_MSG DIR VAR_SET VAR_VAL
    (35) plugin -> . PLUGIN_MSG DIR SPECIAL_CHAR SPECIAL_CHAR DIR SPECIAL_CHAR FLAGS SPECIAL_CHAR VAR_SET VAR_VAL
    (36) plugin -> . PLUGIN_MSG DIR
    (37) plugin -> . PLUGIN_MSG
    (38) plugin -> . IP PORT PLUGIN_MSG DIR VAR_SET VAR_VAL
    (29) sbinit -> . SBIN_IP_MSG IP IP_RNG
    (30) sbinit -> . SBIN_IP_MSG IP IP_RNG PEER IP
    (31) sbinit -> . SBIN_IP_MSG IP PEER IP
    (32) sbinit -> . SBIN_IP_MSG
    (33) sbinit -> . empty
    (39) tuntap -> . TUN_TAP_MSG
    (72) empty -> .

    SYS_MSG         shift and go to state 21
    CRYPTO_MSG      shift and go to state 25
    ROUTE_GATEWAY   shift and go to state 26
    IP_PROTOCOL     shift and go to state 28
    CONN_MSG        shift and go to state 29
    IFCONFIG_END    shift and go to state 30
    TCP_MSG         shift and go to state 31
    SIGTERM_MSG     shift and go to state 32
    OPEN_VPN_MSG    shift and go to state 33
    LIB_VER_MSG     shift and go to state 34
    VAR_SET         shift and go to state 22
    PLUGIN_MSG      shift and go to state 35
    IP              shift and go to state 27
    SBIN_IP_MSG     shift and go to state 36
    TUN_TAP_MSG     shift and go to state 38
    WEEK_DAY        reduce using rule 72 (empty -> .)
    FASE_END        reduce using rule 72 (empty -> .)

    software                       shift and go to state 17
    network                        shift and go to state 18
    hardware                       shift and go to state 19
    plugin                         shift and go to state 20
    sbinit                         shift and go to state 23
    tuntap                         shift and go to state 24
    empty                          shift and go to state 37

state 7

    (9) initbody -> empty .

    FASE_END        reduce using rule 9 (initbody -> empty .)


state 8

    (69) date -> WEEK_DAY . MONTH DAY CLOCK YEAR

    MONTH           shift and go to state 39


state 9

    (2) header -> ROUTE_HEADER vpnip . ROUTE_HEADER

    ROUTE_HEADER    shift and go to state 40


state 10

    (3) vpnip -> VPN_IP . IP vpnip

    IP              shift and go to state 41


state 11

    (4) vpnip -> empty .

    ROUTE_HEADER    reduce using rule 4 (vpnip -> empty .)


state 12

    (1) file -> header init listcon .
    (40) listcon -> listcon . conection
    (42) conection -> . start login peering conline end
    (43) start -> . date TCP_MSG IP PORT
    (69) date -> . WEEK_DAY MONTH DAY CLOCK YEAR

    $end            reduce using rule 1 (file -> header init listcon .)
    WEEK_DAY        shift and go to state 8

    conection                      shift and go to state 42
    start                          shift and go to state 14
    date                           shift and go to state 15

state 13

    (41) listcon -> conection .

    WEEK_DAY        reduce using rule 41 (listcon -> conection .)
    $end            reduce using rule 41 (listcon -> conection .)


state 14

    (42) conection -> start . login peering conline end
    (44) login -> . login loginmsg
    (45) login -> . loginmsg
    (46) loginmsg -> . date IP PORT SYS_MSG FLAGS IP PORT SPECIAL_CHAR VAR_SET VAR_VAL
    (47) loginmsg -> . date plugin
    (48) loginmsg -> . date IP PORT SYS_MSG SPECIAL_CHAR user SPECIAL_CHAR CN_SET
    (49) loginmsg -> . date IP PORT CONN_MSG CRYPTO_MSG
    (50) loginmsg -> . date IP PORT SPECIAL_CHAR user SPECIAL_CHAR PEER IP PORT
    (69) date -> . WEEK_DAY MONTH DAY CLOCK YEAR

    WEEK_DAY        shift and go to state 8

    login                          shift and go to state 43
    loginmsg                       shift and go to state 44
    date                           shift and go to state 45

state 15

    (43) start -> date . TCP_MSG IP PORT

    TCP_MSG         shift and go to state 46


state 16

    (5) init -> initbody FASE_END .

    WEEK_DAY        reduce using rule 5 (init -> initbody FASE_END .)


state 17

    (6) initbody -> date software . initbody
    (6) initbody -> . date software initbody
    (7) initbody -> . date network initbody
    (8) initbody -> . date hardware initbody
    (9) initbody -> . empty
    (69) date -> . WEEK_DAY MONTH DAY CLOCK YEAR
    (72) empty -> .

    WEEK_DAY        shift and go to state 8
    FASE_END        reduce using rule 72 (empty -> .)

    date                           shift and go to state 6
    initbody                       shift and go to state 47
    empty                          shift and go to state 7

state 18

    (7) initbody -> date network . initbody
    (6) initbody -> . date software initbody
    (7) initbody -> . date network initbody
    (8) initbody -> . date hardware initbody
    (9) initbody -> . empty
    (69) date -> . WEEK_DAY MONTH DAY CLOCK YEAR
    (72) empty -> .

    WEEK_DAY        shift and go to state 8
    FASE_END        reduce using rule 72 (empty -> .)

    date                           shift and go to state 6
    initbody                       shift and go to state 48
    empty                          shift and go to state 7

state 19

    (8) initbody -> date hardware . initbody
    (6) initbody -> . date software initbody
    (7) initbody -> . date network initbody
    (8) initbody -> . date hardware initbody
    (9) initbody -> . empty
    (69) date -> . WEEK_DAY MONTH DAY CLOCK YEAR
    (72) empty -> .

    WEEK_DAY        shift and go to state 8
    FASE_END        reduce using rule 72 (empty -> .)

    date                           shift and go to state 6
    initbody                       shift and go to state 49
    empty                          shift and go to state 7

state 20

    (10) software -> plugin .

    WEEK_DAY        reduce using rule 10 (software -> plugin .)
    FASE_END        reduce using rule 10 (software -> plugin .)


state 21

    (11) software -> SYS_MSG . SPECIAL_CHAR VAR_SET VAR_VAL VAR_SET VAR_VAL
    (22) network -> SYS_MSG . VAR_SET VAR_VAL VAR_SET VAR_VAL
    (23) hardware -> SYS_MSG .
    (27) hardware -> SYS_MSG . VAR_SET VAR_VAL

    SPECIAL_CHAR    shift and go to state 50
    VAR_SET         shift and go to state 51
    WEEK_DAY        reduce using rule 23 (hardware -> SYS_MSG .)
    FASE_END        reduce using rule 23 (hardware -> SYS_MSG .)


state 22

    (28) hardware -> VAR_SET . VAR_VAL

    VAR_VAL         shift and go to state 52


state 23

    (12) network -> sbinit .

    WEEK_DAY        reduce using rule 12 (network -> sbinit .)
    FASE_END        reduce using rule 12 (network -> sbinit .)


state 24

    (13) network -> tuntap .

    WEEK_DAY        reduce using rule 13 (network -> tuntap .)
    FASE_END        reduce using rule 13 (network -> tuntap .)


state 25

    (14) network -> CRYPTO_MSG .

    WEEK_DAY        reduce using rule 14 (network -> CRYPTO_MSG .)
    FASE_END        reduce using rule 14 (network -> CRYPTO_MSG .)


state 26

    (15) network -> ROUTE_GATEWAY . IP SLASH IP VAR_SET VAR_VAL VAR_SET VAR_VAL

    IP              shift and go to state 53


state 27

    (38) plugin -> IP . PORT PLUGIN_MSG DIR VAR_SET VAR_VAL

    PORT            shift and go to state 54


state 28

    (16) network -> IP_PROTOCOL .

    WEEK_DAY        reduce using rule 16 (network -> IP_PROTOCOL .)
    FASE_END        reduce using rule 16 (network -> IP_PROTOCOL .)


state 29

    (17) network -> CONN_MSG . VAR_SET VAR_VAL VAR_SET VAR_VAL
    (18) network -> CONN_MSG . VAR_SET IP VAR_SET VAR_VAL SPECIAL_CHAR VAR_SET VAR_VAL
    (20) network -> CONN_MSG .

    VAR_SET         shift and go to state 55
    WEEK_DAY        reduce using rule 20 (network -> CONN_MSG .)
    FASE_END        reduce using rule 20 (network -> CONN_MSG .)


state 30

    (19) network -> IFCONFIG_END .

    WEEK_DAY        reduce using rule 19 (network -> IFCONFIG_END .)
    FASE_END        reduce using rule 19 (network -> IFCONFIG_END .)


state 31

    (21) network -> TCP_MSG .

    WEEK_DAY        reduce using rule 21 (network -> TCP_MSG .)
    FASE_END        reduce using rule 21 (network -> TCP_MSG .)


state 32

    (24) hardware -> SIGTERM_MSG .

    WEEK_DAY        reduce using rule 24 (hardware -> SIGTERM_MSG .)
    FASE_END        reduce using rule 24 (hardware -> SIGTERM_MSG .)


state 33

    (25) hardware -> OPEN_VPN_MSG . MONTH DAY YEAR

    MONTH           shift and go to state 56


state 34

    (26) hardware -> LIB_VER_MSG . DAY MONTH YEAR LIB_VER_MSG

    DAY             shift and go to state 57


state 35

    (34) plugin -> PLUGIN_MSG . DIR VAR_SET VAR_VAL
    (35) plugin -> PLUGIN_MSG . DIR SPECIAL_CHAR SPECIAL_CHAR DIR SPECIAL_CHAR FLAGS SPECIAL_CHAR VAR_SET VAR_VAL
    (36) plugin -> PLUGIN_MSG . DIR
    (37) plugin -> PLUGIN_MSG .

    DIR             shift and go to state 58
    WEEK_DAY        reduce using rule 37 (plugin -> PLUGIN_MSG .)
    FASE_END        reduce using rule 37 (plugin -> PLUGIN_MSG .)


state 36

    (29) sbinit -> SBIN_IP_MSG . IP IP_RNG
    (30) sbinit -> SBIN_IP_MSG . IP IP_RNG PEER IP
    (31) sbinit -> SBIN_IP_MSG . IP PEER IP
    (32) sbinit -> SBIN_IP_MSG .

    IP              shift and go to state 59
    WEEK_DAY        reduce using rule 32 (sbinit -> SBIN_IP_MSG .)
    FASE_END        reduce using rule 32 (sbinit -> SBIN_IP_MSG .)


state 37

    (33) sbinit -> empty .
